# CLSP-RM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/clsprm/: __init__.py  problem.py  solver.py
tests/: test_objective_value.py
tests/data/clsp/: 301_single_product.json
